syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.davinchicoder.springgrpc.proto";
option java_outer_classname = "PostProto";

service Crud {
  rpc GetAllPosts(PaginationRequest) returns (PostList) {}
  rpc GetPostById(PostId) returns (PostDto) {}
  rpc SavePost(PostDto) returns (PostDto) {}
  rpc DeletePost(PostId) returns (PostDto) {}
  rpc UpdatePost(PostDto) returns (PostDto) {}
}

message PaginationRequest {
  int32 count = 1;
  int32 offset = 2;
}

message PostId{
  int64 id = 1;
}

message PostDto{
  int64 id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string imageUrl = 5;
}

message PostList{
  repeated PostDto postDto = 1;
}